package com.memoire.agricompta.domain.enums;

public enum Role {
    ADMIN,
    AGRICULTEUR,
    COMPTABLE
}
