package com.memoire.agricompta.domain.enums;

public enum StatutCampagne {
    PLANIFIEE,
    EN_COURS,
    TERMINEE
}
