package com.memoire.agricompta.domain.enums;

public enum StatutCulture {
    PLANIFIEE,
    EN_COURS,
    RECOLTEE,
    ANNULEE
}
