package com.memoire.agricompta.domain.enums;

public enum TypeMouvement {
    ENTREE,
    SORTIE,
    AJUSTEMENT
}
