package com.memoire.agricompta.domain.enums;

public enum TypeOperation {
    SEMIS,
    FERTILISATION,
    IRRIGATION,
    TRAITEMENT,
    RECOLTE,
    LABOUR,
    DESHERBAGE,
    AUTRE
}
