package com.memoire.agricompta.domain.enums;

public enum TypeProduit {
    SEMENCE,
    ENGRAIS,
    PRODUIT_PHYTOSANITAIRE,
    CARBURANT,
    ALIMENT,
    MATERIEL_CONSOMMABLE,
    AUTRE
}
